--- a/style/vars.less
+++ b/style/vars.less
@@ -1,14 +1,23 @@
-@pri: #303F9F;
-@sec: #00BCD4;
-@tri: #E91E63;
-@mainText: #444;
+@indigo: #303F9F;
+@lightBlue: #00BCD4;
+@pink: #E91E63;
+@darkGrey: #444;
+@lightGrey: #ddd;
+@lighterGrey: #eee;
+@offWhite: #f8f8f9;
+
+
+@pri: @indigo;
+@sec: @lightBlue;
+@tri: @pink;
+@mainText: @darkGrey;
 @mainTextEmphasis: #000;
-@supportFillLight: #ddd;
-@supportFillDark: #444;
-@supportTextLight: #eee;
+@supportFillLight: @lightGrey;
+@supportFillDark: @darkGrey;
+@supportTextLight: @lighterGrey;
 @supportTextLightEmphasis: #fff;
 
-@sectionFill: #f8f8f9;
+@sectionFill: @offWhite;
 @sectionFillAlt: #fff;
 
 .palette-opts() {
