--- a/style/main.less
+++ b/style/main.less
@@ -1,19 +1,42 @@
 @import 'vars.less';
 @import 'bootstrap-customize.less';
 @import 'accent-elements.less';
+@import 'image-set.less';
+
+div,
+p {
+  &.center {
+    text-align: center;
+  }
+}
 
 footer {
-  border-top: 1px solid @navbar-inverse-bg; //#080808; /// Match Bootstrap's Inverse colors
-  background-color: @navbar-inverse-border;
+  border-top: 1px solid @navbar-inverse-bg; /// Match Bootstrap's Inverse colors
+  background-color: fade(@navbar-inverse-border, 70%);
   color: @supportTextLight;
   padding: 30px 0 50px;
   box-shadow: 0 -3px 3px rgba(0, 0, 0, 0.5);
 
   .header-color(@sec);
+
+  hr {
+    border-top-color: @darkGrey;
+  }
+}
+
+.footer-wrap {
+  background-image: url('../images/footer.jpg');
+  background-size: cover;
+}
+
+.lead-wrap {
+  background: url('../images/header.jpg');
+  background-size: cover;
 }
 
 .page-lead {
-  background: linear-gradient(-10deg, @pri 10%, @sec 90%);
+  @gradientTrans: 70%;
+  background: linear-gradient(-10deg, fade(@pri, @gradientTrans) 10%, fade(@sec, @gradientTrans) 90%);
   text-align: center;
   text-shadow: 0 1px 4px rgba(0,0,0,2);
   padding: 50px;
@@ -52,7 +75,7 @@ footer {
   h1 {
     color: @pri;
     font-variant: small-caps;
-    border-bottom: 1px solid #ddd;
+    border-bottom: 1px solid @lightGrey;
     padding-bottom: 10px;
   }
 
@@ -141,12 +164,14 @@ footer {
   }
 
   .brush rect.extent {
-    fill: @sec;
-    fill-opacity: .125;
+    //fill: @sec;
+    //fill-opacity: .125;
+    fill: transparent;
+    stroke: @darkGrey;
   }
 
   .brush .resize path {
-    fill: #444;
+    fill: @darkGrey;
     stroke: transparent;
   }
 }
