More Vis and ongoing style adjustments

--- a/style/image-set.less
+++ b/style/image-set.less
@@ -1,8 +1,10 @@
 @import 'vars.less';
 
 .image-set {
+    @wellColor: @lighterGrey;
+
   .image-set-thumbnails {
-    background-color: @supportFillDark;
+    background-color: @wellColor;
     margin-bottom: 0px;
     padding: 10px;
     text-align: center;
@@ -71,7 +73,7 @@
     // The bottom corners
     border-radius: 0 0 @border-radius-base @border-radius-base;
 
-    border: 1px solid @supportFillDark;
+    border: 1px solid @wellColor;
     padding: 20px;
     background-color: #fff;
 
