--- a/style/main.less
+++ b/style/main.less
@@ -129,6 +129,18 @@ footer {
   }
 }
 
+.chart-wrap {
+  background-color: #fff;
+  border: 1px solid @lighterGrey;
+  border-radius: @border-radius-base;
+  padding: 10px;
+  margin-bottom: 20px;
+
+  img {
+    max-width: 100%;
+  }
+}
+
 
 .bar-chart {
   // rect.extent {
@@ -164,8 +176,6 @@ footer {
   }
 
   .brush rect.extent {
-    //fill: @sec;
-    //fill-opacity: .125;
     fill: transparent;
     stroke: @darkGrey;
   }
