--- a/style/accent-elements.less
+++ b/style/accent-elements.less
@@ -21,9 +21,23 @@
   .palette-opts();
 
   margin-bottom: (@bubbleStemSize + @accentMargin);
-  font-size: 24px;
+  font-size: 32px;
   font-weight: lighter;
   width: 50%;
+
+  h1, h2, h3, h4, h5, h6 {
+    font-weight: normal;
+    margin-top: 0;
+  }
+
+  .standard-text {
+    font-size: 14px;
+    font-weight: normal;
+  }
+
+  &.fill {
+    width: 100%;
+  }
 
   &.pri::after {
     border-left-color: @pri;
@@ -56,8 +70,16 @@
     border-left: @bubbleStemSize solid @sec;
   }
 
+  &.no-top-margin {
+    margin-top: 0;
+  }
+
   &.right {
     margin-left: 50%;
+
+    &.no-left-margin {
+      margin-left: 0;
+    }
 
     &.pri::after {
       border-right-color: @pri;
@@ -122,6 +144,42 @@ ul {
 
     li {
       list-style: none;
+    }
+  }
+
+  &.inline {
+    li {
+      display: inline-block;
+      margin: 0 10px 10px 0;
+    }
+  }
+
+  &.tonal {
+    li {
+      background-color: rgba(0,0,0, 0.1);
+      border-radius: @border-radius-base;
+      padding: 0 10px;
+    }
+  }
+}
+
+.item-listing {
+  margin: 0;
+  padding: 0;
+
+  li {
+    list-style: none;
+    display: inline-block;
+
+    background-color: @sec;
+    color: @supportTextLight;
+    border-radius: @border-radius-base;
+
+    padding: 5px 10px;
+    margin: 0 10px 10px 0;
+
+    &:hover {
+      color: @supportTextLightEmphasis;
     }
   }
 }
