--- a/style/vars.less
+++ b/style/vars.less
@@ -2,6 +2,7 @@
 @lightBlue: #00BCD4;
 @pink: #E91E63;
 @darkGrey: #444;
+@mediumGrey: #999;
 @lightGrey: #ddd;
 @lighterGrey: #eee;
 @offWhite: #f8f8f9;
