Image set updates

--- a/style/image-set.less
+++ b/style/image-set.less
@@ -8,6 +8,10 @@
       height: 500px;
     }
 
+    hr {
+      border-top-color: @lightGrey;
+    }
+
     .image-set-list {
       position: absolute;
       top: 0;
