--- a/style/vars.less
+++ b/style/vars.less
@@ -17,6 +17,7 @@
 @supportFillDark: @darkGrey;
 @supportTextLight: @lighterGrey;
 @supportTextLightEmphasis: #fff;
+@dimFill: rgba(0,0,0, 0.1);
 
 @sectionFill: @offWhite;
 @sectionFillAlt: #fff;
@@ -45,6 +46,10 @@
 
   &.tri {
     background-color: @tri;
+  }
+
+  &.dim {
+    background-color: @dimFill;
   }
 }
 
