--- a/style/bootstrap-customize.less
+++ b/style/bootstrap-customize.less
@@ -4,9 +4,10 @@
   border-radius: 0;
   margin-top: -50px;
   transition: margin 0s;
+  text-align: center;
 
   .navbar-brand {
-    padding-top: 2px;
+    padding-top: 5px;
     padding-bottom: 0;
   }
 
@@ -18,6 +19,10 @@
     box-shadow: 0 3px 3px rgba(0, 0, 0, 0.5);
     margin-top: 0;
     transition: margin 0.75s;
+  }
+
+  .container-fluid {
+    display: inline-block;
   }
 }
 
