--- a/style/main.less
+++ b/style/main.less
@@ -62,7 +62,7 @@ footer {
 .section {
   color: @mainText;
   background-color: @sectionFill;
-  padding: 20px 20px 50px;
+  padding: 50px 20px;
 
   &:nth-child(odd) {
     background-color: @sectionFillAlt;
@@ -117,6 +117,10 @@ footer {
   }
 }
 
+.light {
+  font-weight: lighter;
+}
+
 .vspace {
   height: 50px;
 }
@@ -136,6 +140,10 @@ footer {
   border-radius: @border-radius-base;
   padding: 10px;
   margin-bottom: 20px;
+
+  &.no-r-pad {
+    padding-right: 0;
+  }
 
   img {
     max-width: 100%;
@@ -158,7 +166,7 @@ footer {
     bottom: 0;
     right: 0;
     width: 100px;
-    background: linear-gradient(90deg, transparent 0, #eee 90%);
+    background: linear-gradient(90deg, transparent 0, lighten(@lighterGrey, 0.9%) 100%);
   }
 
   .scroll-hort {
@@ -229,5 +237,6 @@ footer {
 }
 
 #chart-yasc {
-  width: 920px;
+  //width: 920px;
+  text-align: center;
 }
