--- a/style/vars.less
+++ b/style/vars.less
@@ -20,7 +20,7 @@
 @dimFill: rgba(0,0,0, 0.1);
 
 @sectionFill: @offWhite;
-@sectionFillAlt: #fff;
+@sectionFillAlt: #f4f4f4;
 
 .palette-opts() {
   &.light {
