Minor image set tweaks

--- a/style/image-set.less
+++ b/style/image-set.less
@@ -30,6 +30,10 @@
       font-weight: bold;
       color: @mediumGrey;
       margin-left: 10px;
+
+      &.header-vspace {
+        margin-top: 10px;
+      }
     }
 
     .image-set-list {
